--- a/services/jupyter/Dockerfile
+++ b/services/jupyter/Dockerfile
@@ -2,7 +2,7 @@ FROM spark:3.5.7
 
 USER root
 
-ARG PYTHON_VERSION=3.13.7
+ARG PYTHON_VERSION=3.12.9
 
 RUN set -eux; \
     apt-get update; \
@@ -11,6 +11,7 @@ RUN set -eux; \
         wget \
         curl \
         ca-certificates \
+        git \
         libssl-dev \
         zlib1g-dev \
         libncurses5-dev \
@@ -39,12 +40,12 @@ RUN set -eux; \
     rm -rf /tmp/Python-${PYTHON_VERSION}*
 
 RUN set -eux; \
-    python3.13 -m ensurepip; \
-    python3.13 -m pip install --no-cache-dir --upgrade pip setuptools wheel; \
-    ln -sf /usr/local/bin/python3.13 /usr/bin/python3; \
-    ln -sf /usr/local/bin/python3.13 /usr/bin/python; \
-    ln -sf /usr/local/bin/pip3.13 /usr/bin/pip3; \
-    ln -sf /usr/local/bin/pip3.13 /usr/bin/pip
+    python3.12 -m ensurepip; \
+    python3.12 -m pip install --no-cache-dir --upgrade pip setuptools wheel; \
+    ln -sf /usr/local/bin/python3.12 /usr/bin/python3; \
+    ln -sf /usr/local/bin/python3.12 /usr/bin/python; \
+    ln -sf /usr/local/bin/pip3.12 /usr/bin/pip3; \
+    ln -sf /usr/local/bin/pip3.12 /usr/bin/pip
 
 COPY requirements.txt /tmp/requirements.txt
 
@@ -67,10 +68,26 @@ ENV SPARK_HOME=/opt/spark
 ENV PYSPARK_PYTHON=/usr/bin/python
 ENV PYTHONPATH=/opt/spark/python:/opt/spark/python/lib/py4j.zip
 
+# OpenSSL 1.1 runtime for Spark native library
+RUN apt-get update && \
+    apt-get install -y wget && \
+    wget http://archive.debian.org/debian/pool/main/o/openssl/libssl1.1_1.1.1w-0+deb11u1_amd64.deb && \
+    dpkg -i libssl1.1_1.1.1w-0+deb11u1_amd64.deb && \
+    rm libssl1.1_1.1.1w-0+deb11u1_amd64.deb
+
+# Preload Spark Hadoop + AWS dependencies
+RUN mkdir -p /opt/spark/jars && \
+    wget -q https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-aws/3.3.4/hadoop-aws-3.3.4.jar -P /opt/spark/jars && \
+    wget -q https://repo1.maven.org/maven2/com/amazonaws/aws-java-sdk-bundle/1.12.517/aws-java-sdk-bundle-1.12.517.jar -P /opt/spark/jars && \
+    wget -q https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-common/3.3.4/hadoop-common-3.3.4.jar -P /opt/spark/jars && \
+    wget -q https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-client/3.3.4/hadoop-client-3.3.4.jar -P /opt/spark/jars
+
 WORKDIR /work
 
 ENTRYPOINT ["/usr/bin/tini","--"]
 
 # To build the image:
-# docker build -f ./services/jupyter/Dockerfile -t my-jupyter:20252911_0900 ./services/jupyter/
+# docker build -f ./services/jupyter/Dockerfile -t my-jupyter-py312:20253011_1200 ./services/jupyter/
 
+# To save the image to a compressed tar file:
+# docker save my-jupyter-py312:20253011_1200 | gzip > ./docker_image/my-jupyter-py312_20253011_1200.tar.gz
