--- a/services/jupyter/requirements.txt
+++ b/services/jupyter/requirements.txt
@@ -1,5 +1,5 @@
 absl-py==2.3.1
-# aiobotocore==2.15.2
+aiobotocore
 aiohappyeyeballs==2.6.1
 aiohttp==3.13.2
 aioitertools==0.12.0
@@ -42,7 +42,7 @@ colorama==0.4.6
 colorlog==6.9.0
 comm==0.2.3
 contourpy==1.3.3
-crayons==0.4.0
+crayons
 cryptography==45.0.7
 cvxpy==1.7.2
 cycler==0.12.1
@@ -165,7 +165,7 @@ matplotlib==3.10.6
 matplotlib-inline==0.1.7
 mcp==1.14.1
 mdurl==0.1.2
-# mine==4.2.3
+# mine
 minilog==2.3.1
 mistune==3.1.4
 ml_dtypes==0.5.3
@@ -244,7 +244,7 @@ prometheus_client==0.22.1
 prompt_toolkit==3.0.52
 propcache==0.4.1
 protobuf==6.31.1
-psutil==7.1.2
+psutil
 ptyprocess==0.7.0
 pure_eval==0.2.3
 py-cpuinfo==9.0.0
@@ -282,9 +282,9 @@ rfc3987-syntax==1.1.0
 rich==14.1.0
 rich-rst==1.3.1
 ropwr==1.1.0
-# rpds-py==0.27.1
-# rpy2==3.6.2
-# rpy2-robjects==3.6.1
+# rpds-py
+# rpy2
+# rpy2-robjects
 rsa==4.9.1
 ruamel.yaml==0.18.15
 ruamel.yaml.clib==0.2.12
@@ -329,12 +329,12 @@ tinycss2==1.4.0
 tomli==2.2.1
 tomlkit==0.10.2
 toolz==1.0.0
-torch==2.8.0
-torchdata==0.11.0
-torchmetrics==1.8.2
-torchtext==0.6.0
-torchvision==0.23.0
-tornado==6.5.2
+# torch==2.8.0
+# torchdata==0.11.0
+# torchmetrics==1.8.2
+# torchtext==0.6.0
+# torchvision==0.23.0
+# tornado==6.5.2
 tqdm==4.67.1
 traitlets==5.14.3
 triton==3.4.0
