--- a/services/docker-compose.yaml
+++ b/services/docker-compose.yaml
@@ -5,6 +5,8 @@ services:
     environment:
       - SPARK_MODE=master
       - SPARK_NO_DAEMONIZE=1
+      - SPARK_EVENTLOG_ENABLED=true
+      - SPARK_EVENTLOG_DIR=file:/tmp/spark-events
     ports:
       - "8880:8080"
       - "7077:7077"
@@ -12,6 +14,13 @@ services:
     networks: [spark_network]
     volumes:
       - ./spark/data:/data:ro
+      - spark-events:/tmp/spark-events
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 15s
 
   worker_1:
     image: my-spark-py312:20253011_0900
@@ -22,6 +31,8 @@ services:
       - SPARK_WORKER_CORES=1
       - SPARK_NO_DAEMONIZE=1
       - SPARK_WORKER_MEMORY=1G
+      - SPARK_EVENTLOG_ENABLED=true
+      - SPARK_EVENTLOG_DIR=file:/tmp/spark-events
     depends_on: [master]
     command: ["/opt/spark/sbin/start-worker.sh","spark://master:7077"]
     ports:
@@ -29,6 +40,13 @@ services:
     networks: [spark_network]
     volumes:
       - ./spark/data:/data:ro
+      - spark-events:/tmp/spark-events
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8081"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 20s
 
   worker_2:
     image: my-spark-py312:20253011_0900
@@ -39,6 +57,8 @@ services:
       - SPARK_NO_DAEMONIZE=1
       - SPARK_WORKER_CORES=1
       - SPARK_WORKER_MEMORY=1G
+      - SPARK_EVENTLOG_ENABLED=true
+      - SPARK_EVENTLOG_DIR=file:/tmp/spark-events
     depends_on: [master]
     command: ["/opt/spark/sbin/start-worker.sh","spark://master:7077"]
     ports:
@@ -46,6 +66,31 @@ services:
     networks: [spark_network]
     volumes:
       - ./spark/data:/data:ro
+      - spark-events:/tmp/spark-events
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8081"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 20s
+  
+  history:
+    image: my-spark-py312:20253011_0900
+    container_name: spark-history
+    environment:
+      - SPARK_NO_DAEMONIZE=1
+    command: ["/opt/spark/sbin/start-history-server.sh"]
+    ports:
+      - "18080:18080"
+    volumes:
+      - spark-events:/tmp/spark-events
+    networks: [spark_network]
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:18080"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 20s
 
   jupyter:
     image: my-jupyter-py312:20253011_1200
@@ -54,6 +99,7 @@ services:
       - "8888:8888"
     volumes:
       - ./jupyter/notebooks:/work
+      - spark-events:/tmp/spark-events
     working_dir: /work
     command: >
       jupyter lab
@@ -63,6 +109,12 @@ services:
       --IdentityProvider.token=dev
       --allow-root
     networks: [spark_network]
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8888/lab"]
+      interval: 20s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
 
   postgres:
     image: my-postgres:20252911_0900
@@ -130,8 +182,9 @@ services:
       - ./airflow/plugins:/opt/airflow/plugins:rw
     networks: [spark_network]
     restart: "no"
-    command: >
-      bash -c "airflow db init && airflow users create --username '${AIRFLOW_ADMIN_USER}' --password '${AIRFLOW_ADMIN_PASS}' --firstname 'Admin' --lastname 'User' --role 'Admin' --email '${AIRFLOW_ADMIN_EMAIL}'"
+    command: |
+      bash -c "airflow db init && 
+              airflow users create -u airflow -p airflow123 -f Admin -l User -r Admin -e airflow@localhost.com"
     
   airflow-webserver:
     image: my-airflow-py312:20252911_1800
@@ -160,6 +213,10 @@ services:
       timeout: 10s
       retries: 5
       start_period: 60s
+    volumes:
+      - ./airflow/dags:/opt/airflow/dags:rw
+      - ./airflow/logs:/opt/airflow/logs:rw
+      - ./airflow/plugins:/opt/airflow/plugins:rw
     networks: [spark_network]
     restart: unless-stopped
 
@@ -188,6 +245,10 @@ services:
       timeout: 10s
       retries: 5
       start_period: 60s
+    volumes:
+      - ./airflow/dags:/opt/airflow/dags:rw
+      - ./airflow/logs:/opt/airflow/logs:rw
+      - ./airflow/plugins:/opt/airflow/plugins:rw
     networks: [spark_network]
     restart: unless-stopped
 
@@ -216,6 +277,43 @@ services:
       timeout: 20s
       retries: 5
       start_period: 60s
+    volumes:
+      - ./airflow/dags:/opt/airflow/dags:rw
+      - ./airflow/logs:/opt/airflow/logs:rw
+      - ./airflow/plugins:/opt/airflow/plugins:rw
+    networks: [spark_network]
+    restart: unless-stopped
+  
+
+  airflow-trigger:
+    image: my-airflow-py312:20252911_1800
+    container_name: airflow-trigger
+    depends_on:
+      - airflow-init
+    environment:
+      AIRFLOW__CORE__EXECUTOR: CeleryExecutor
+      AIRFLOW__CELERY__BROKER_URL: redis://redis:6379/0
+      AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://airflow:airflow@postgres:5432/airflow
+      AIRFLOW__CORE__LOAD_EXAMPLES: "false"
+      AIRFLOW__CORE__FERNET_KEY: ${AIRFLOW_FERNET_KEY:-41frjvXyB6uoLBPmYuKXwwXstY9aQTxUrB0Yv0cBdOQ=}
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres:5432/airflow
+      AIRFLOW__WEBSERVER__EXPOSE_CONFIG: "true"
+      AIRFLOW__WEBSERVER__AUTHENTICATE: "True"
+      AIRFLOW__WEBSERVER__RBAC: "True"
+      AIRFLOW__WEBSERVER__RBAC_AUTH_USER_REGISTRATION: "False"
+      AIRFLOW__WEBSERVER__SECRET_KEY: ${AIRFLOW_SECRET_KEY:-41frjvXyB6uoLBPmYuKXwwXstY9aQTxUrB0Yv0cBdOQ=}
+      TZ: Asia/Bangkok
+    command: bash -lc "airflow triggerer"
+    healthcheck:
+      test: ["CMD-SHELL", "ps aux | grep 'airflow triggerer' | grep -qv grep"]
+      interval: 30s
+      timeout: 20s
+      retries: 5
+      start_period: 60s
+    volumes:
+      - ./airflow/dags:/opt/airflow/dags:rw
+      - ./airflow/logs:/opt/airflow/logs:rw
+      - ./airflow/plugins:/opt/airflow/plugins:rw
     networks: [spark_network]
     restart: unless-stopped
 
@@ -287,3 +385,4 @@ volumes:
   gitlab_data:
   gitlab_config:
   gitlab_logs:
+  spark-events:
