--- a/services/airflow/Dockerfile
+++ b/services/airflow/Dockerfile
@@ -9,7 +9,7 @@ RUN set -eux; \
     apt-get install -y --no-install-recommends \
       ca-certificates curl wget git \
       iproute2 iputils-ping dnsutils netcat-traditional \
-      procps lsof jq less vim-tiny \
+      procps lsof jq less vim-tiny nano \
       openssl tzdata; \
     rm -rf /var/lib/apt/lists/*
 
@@ -22,8 +22,32 @@ RUN set -eux; \
 #     fi; \
 #     rm -rf /tmp/certs
 
-USER airflow
+# Install Spark 3.5.7 (precompiled for Hadoop 3)
+# Set Spark environment
+ENV SPARK_VERSION=3.5.7
+ENV HADOOP_VERSION=3
+ENV SPARK_HOME=/opt/spark
+ENV PATH=$SPARK_HOME/bin:$PATH
 
+# Copy offline Spark tarball and extract
+COPY ./spark/spark-3.5.7-bin-hadoop3.tgz /tmp/
+RUN mkdir -p $SPARK_HOME && \
+    tar -xzf /tmp/spark-3.5.7-bin-hadoop3.tgz -C $SPARK_HOME --strip-components=1 && \
+    rm /tmp/spark-3.5.7-bin-hadoop3.tgz
+
+# Preload Hadoop + AWS dependencies
+RUN mkdir -p $SPARK_HOME/jars && \
+    wget -q https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-aws/3.3.4/hadoop-aws-3.3.4.jar -P $SPARK_HOME/jars && \
+    wget -q https://repo1.maven.org/maven2/com/amazonaws/aws-java-sdk-bundle/1.12.517/aws-java-sdk-bundle-1.12.517.jar -P $SPARK_HOME/jars && \
+    wget -q https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-common/3.3.4/hadoop-common-3.3.4.jar -P $SPARK_HOME/jars && \
+    wget -q https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-client/3.3.4/hadoop-client-3.3.4.jar -P $SPARK_HOME/jars
+
+# Set JAVA_HOME
+RUN apt-get update && apt-get install -y openjdk-17-jdk-headless
+ENV JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
+ENV PATH=$JAVA_HOME/bin:$PATH
+
+USER airflow
 RUN set -eux; \
     pip install --no-cache-dir --upgrade pip; \
     pip install --no-cache-dir --constraint /home/airflow/constraints.txt \
@@ -39,8 +63,9 @@ RUN set -eux; \
 COPY requirements.txt /tmp/requirements.txt
 RUN pip install --no-cache-dir -r /tmp/requirements.txt
 
+
 # To build the image:
-# docker build -f ./services/airflow/Dockerfile -t my-airflow-py312:20252911_1800 ./services/airflow/
+# docker build -f ./services/airflow/Dockerfile -t my-airflow-py312:20250112_1800 ./services/airflow/
 
 # To save the image to a compressed tar file:
-# docker save my-airflow-py312:20252911_1800 | gzip > ./docker_image/my-airflow-py312_20252911_1800.tar.gz
+# docker save my-airflow-py312:20250112_1800 | gzip > ./docker_image/my-airflow-py312_20250112_1800.tar.gz
