--- a/services/airflow/requirements.txt
+++ b/services/airflow/requirements.txt
@@ -1,6 +1,9 @@
 pyspark==3.5.7
 tqdm
 boto3
+aiohttp
+beautifulsoup4
+bokeh
 oracledb
 polars
 pandas
@@ -16,3 +19,18 @@ pillow==12.0.0
 asyncpg
 airflow-code-editor
 connexion[swagger-ui]
+joblib
+Jinja2
+loguru
+matplotlib
+numpy
+optuna
+oracledb
+pillow
+python-dotenv
+PyYAML
+regex
+s3fs
+shap
+tqdm
+xgboost
