--- a/services/docker-compose.yaml
+++ b/services/docker-compose.yaml
@@ -48,31 +48,31 @@ services:
       retries: 5
       start_period: 20s
 
-  worker_2:
-    image: my-spark-py312:20253011_0900
-    container_name: worker_2
-    environment:
-      - SPARK_MODE=worker
-      - SPARK_MASTER_URL=spark://master:7077
-      - SPARK_NO_DAEMONIZE=1
-      - SPARK_WORKER_CORES=1
-      - SPARK_WORKER_MEMORY=1G
-      - SPARK_EVENTLOG_ENABLED=true
-      - SPARK_EVENTLOG_DIR=file:/tmp/spark-events
-    depends_on: [master]
-    command: ["/opt/spark/sbin/start-worker.sh","spark://master:7077"]
-    ports:
-      - "8882:8882"
-    networks: [spark_network]
-    volumes:
-      - ./spark/data:/data:ro
-      - spark-events:/tmp/spark-events
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8081"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 20s
+  # worker_2:
+  #   image: my-spark-py312:20253011_0900
+  #   container_name: worker_2
+  #   environment:
+  #     - SPARK_MODE=worker
+  #     - SPARK_MASTER_URL=spark://master:7077
+  #     - SPARK_NO_DAEMONIZE=1
+  #     - SPARK_WORKER_CORES=1
+  #     - SPARK_WORKER_MEMORY=1G
+  #     - SPARK_EVENTLOG_ENABLED=true
+  #     - SPARK_EVENTLOG_DIR=file:/tmp/spark-events
+  #   depends_on: [master]
+  #   command: ["/opt/spark/sbin/start-worker.sh","spark://master:7077"]
+  #   ports:
+  #     - "8882:8882"
+  #   networks: [spark_network]
+  #   volumes:
+  #     - ./spark/data:/data:ro
+  #     - spark-events:/tmp/spark-events
+  #   healthcheck:
+  #     test: ["CMD", "curl", "-f", "http://localhost:8081"]
+  #     interval: 10s
+  #     timeout: 5s
+  #     retries: 5
+  #     start_period: 20s
   
   history:
     image: my-spark-py312:20253011_0900
@@ -93,7 +93,7 @@ services:
       start_period: 20s
 
   jupyter:
-    image: my-jupyter-py312:20253011_1200
+    image: my-jupyter-py312:20250112_1414
     container_name: jupyter
     ports:
       - "8888:8888"
@@ -109,6 +109,8 @@ services:
       --IdentityProvider.token=dev
       --allow-root
     networks: [spark_network]
+    environment:
+      - TERM=xterm-256color
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8888/lab"]
       interval: 20s
@@ -138,6 +140,7 @@ services:
   redis:
     image: my-redis:20252911_0900
     container_name: redis
+    hostname: redis
     command: ["redis-server", "--appendonly", "yes"]
     volumes:
       - redis_data:/data
@@ -148,12 +151,30 @@ services:
       timeout: 3s
       retries: 10
     restart: unless-stopped
+  
+  # redis-ui:
+  #   image: my-redis-ui:20250112_0900 # or "ghcr.io/joeferner/redis-commander:latest"
+  #   container_name: redis-ui
+  #   hostname: redis-ui
+  #   restart: always
+  #   environment:
+  #   - REDIS_HOSTS=local:redis:6379
+  #   ports:
+  #   - "18081:8081"
+  #   user: redis
+  #   networks: [spark_network]
+  #   healthcheck:
+  #     test: ["CMD", "wget", "-qO-", "http://127.0.0.1:8081/"]
+  #     interval: 10s
+  #     timeout: 3s
+  #     retries: 5
+  #     start_period: 20s
 
   airflow-init:
     # build:
     #   context: .
     #   dockerfile: airflow/Dockerfile 
-    image: my-airflow-py312:20252911_1800
+    image: my-airflow-py312:20250112_1800
     container_name: airflow-init
     depends_on:
       postgres:
@@ -180,14 +201,20 @@ services:
       - ./airflow/dags:/opt/airflow/dags:rw
       - ./airflow/logs:/opt/airflow/logs:rw
       - ./airflow/plugins:/opt/airflow/plugins:rw
+      - spark-events:/tmp/spark-events:rw
     networks: [spark_network]
     restart: "no"
-    command: |
-      bash -c "airflow db init && 
-              airflow users create -u airflow -p airflow123 -f Admin -l User -r Admin -e airflow@localhost.com"
+    user: "0:0"
+    command: >
+      bash -c '
+        mkdir -p /opt/airflow/logs /opt/airflow/dags /opt/airflow/plugins /tmp/spark-events &&
+        chown -R 50000:0 /opt/airflow/logs /opt/airflow/dags /opt/airflow/plugins /tmp/spark-events &&
+        airflow db init &&
+        airflow users create -u airflow -p airflow123 -f Admin -l User -r Admin -e airflow@localhost.com
+      '
     
   airflow-webserver:
-    image: my-airflow-py312:20252911_1800
+    image: my-airflow-py312:20250112_1800
     container_name: airflow-webserver
     depends_on:
       - airflow-init
@@ -206,7 +233,10 @@ services:
       TZ: Asia/Bangkok
     ports:
       - "8083:8080"
-    command: bash -c "airflow webserver"
+    command: >
+      bash -c "
+        airflow webserver
+      "
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
       interval: 30s
@@ -217,11 +247,12 @@ services:
       - ./airflow/dags:/opt/airflow/dags:rw
       - ./airflow/logs:/opt/airflow/logs:rw
       - ./airflow/plugins:/opt/airflow/plugins:rw
+      - spark-events:/tmp/spark-events:rw
     networks: [spark_network]
     restart: unless-stopped
 
   airflow-scheduler:
-    image: my-airflow-py312:20252911_1800
+    image: my-airflow-py312:20250112_1800
     container_name: airflow-scheduler
     depends_on:
       - airflow-init
@@ -249,11 +280,12 @@ services:
       - ./airflow/dags:/opt/airflow/dags:rw
       - ./airflow/logs:/opt/airflow/logs:rw
       - ./airflow/plugins:/opt/airflow/plugins:rw
+      - spark-events:/tmp/spark-events:rw
     networks: [spark_network]
     restart: unless-stopped
 
   airflow-worker:
-    image: my-airflow-py312:20252911_1800
+    image: my-airflow-py312:20250112_1800
     container_name: airflow-worker
     depends_on:
       - airflow-init
@@ -281,12 +313,13 @@ services:
       - ./airflow/dags:/opt/airflow/dags:rw
       - ./airflow/logs:/opt/airflow/logs:rw
       - ./airflow/plugins:/opt/airflow/plugins:rw
+      - spark-events:/tmp/spark-events:rw
     networks: [spark_network]
     restart: unless-stopped
   
 
   airflow-trigger:
-    image: my-airflow-py312:20252911_1800
+    image: my-airflow-py312:20250112_1800
     container_name: airflow-trigger
     depends_on:
       - airflow-init
@@ -314,13 +347,11 @@ services:
       - ./airflow/dags:/opt/airflow/dags:rw
       - ./airflow/logs:/opt/airflow/logs:rw
       - ./airflow/plugins:/opt/airflow/plugins:rw
+      - spark-events:/tmp/spark-events:rw
     networks: [spark_network]
     restart: unless-stopped
 
   gitlab:
-    # build:
-    #   context: ./gitlab
-    #   dockerfile: Dockerfile
     image: my-gitlab:20252911_0900
     container_name: gitlab
     hostname: gitlab
@@ -353,7 +384,30 @@ services:
     depends_on:
       - postgres
       - redis
-  
+
+  # gitlab-runner:
+  #   image: my-gitlab-runner:20250112_0900
+  #   container_name: gitlab-runner
+  #   hostname: gitlab-runner
+  #   healthcheck:
+  #     test: ["CMD-SHELL", "gitlab-runner status || exit 1"]
+  #     interval: 30s
+  #     timeout: 10s
+  #     retries: 3
+  #     start_period: 300s
+  #   volumes:
+  #     - gitlab_runner_config:/etc/gitlab-runner
+  #     - /var/run/docker.sock:/var/run/docker.sock
+  #   environment:
+  #     - CI_SERVER_URL=http://gitlab:9084/
+  #     - REGISTRATION_TOKEN=<token get from GitLab>
+  #     - RUNNER_NAME=my-runner
+  #     - RUNNER_EXECUTOR=docker
+  #   networks: [spark_network]
+  #   restart: unless-stopped
+  #   depends_on:
+  #     - gitlab
+
   minio:
     image: my-minio:20252911_0900
     container_name: minio-cs
