feat: update services

--- a/services/.env
+++ b/services/.env
@@ -1,6 +1,52 @@
+# --- PROJECT SETTINGS ---
+TZ=Asia/Bangkok
+COMPOSE_PROJECT_NAME=corin
+
+# --- IMAGES VERSIONS ---
+SPARK_IMAGE=my-spark-py312:20253011_0900
+JUPYTER_IMAGE=my-jupyter-py312:20250112_1414
+POSTGRES_IMAGE=my-postgres:20252911_0900
+POSTGRES_UI_IMAGE=my-postgres-ui:20251217_0900
+REDIS_IMAGE=my-redis:20252911_0900
+AIRFLOW_IMAGE=my-airflow-py312:20250112_1800
+GITEA_IMAGE=my-gitea:20251217_0900
+MINIO_IMAGE=my-minio:20252911_0900
+
+# --- PASSWORDS & SECRETS (Change these!) ---
+JUPYTER_TOKEN=dev
+
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres123
+
+MINIO_ROOT_USER=minio
+MINIO_ROOT_PASSWORD=minio123
+
+GITEA_ADMIN_USER=gitea
+GITEA_ADMIN_PASS=gitea123
+GITEA_ADMIN_EMAIL=gitea@localhost.com
+
 AIRFLOW_ADMIN_USER=airflow
 AIRFLOW_ADMIN_PASS=airflow123
-AIRFLOW_ADMIN_EMAIL=airflow@admin.com
+AIRFLOW_ADMIN_EMAIL=airflow@localhost.com
+AIRFLOW_FERNET_KEY=41frjvXyB6uoLBPmYuKXwwXstY9aQTxUrB0Yv0cBdOQ=
+AIRFLOW_SECRET_KEY=41frjvXyB6uoLBPmYuKXwwXstY9aQTxUrB0Yv0cBdOQ=
 
-# AIRFLOW_FERNET_KEY=
-# AIRFLOW_SECRET_KEY=
+# --- PORTS ---
+SPARK_UI_PORT_START=4040
+SPARK_UI_PORT_END=4080
+
+SPARK_MASTER_WEBUI_PORT=8880
+SPARK_HISTORY_PORT=18080
+
+JUPYTER_PORT=8888
+
+AIRFLOW_WEBSERVER_PORT=8083
+
+GITEA_HTTP_PORT=3000
+GITEA_SSH_PORT=2222
+# GITEA_RUNNER_TOKEN=CHANGE_ME_TO_A_SECURE_TOKEN
+
+MINIO_API_PORT=9990
+MINIO_CONSOLE_PORT=9991
+
+POSTGRES_UI_PORT=9081
